Fix padding; organize CSS declarations

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
-            <!-- Header anchor elements -->
+        <nav>
+            <!-- Header nav anchor elements -->
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,7 +24,7 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </header>
 
     <!-- Hero image -->
@@ -49,7 +49,7 @@
 
         <!-- 2nd value prop -->
         <article id="online-reputation-management" class="value-prop">
-            <div class="value-prop-content">
+            <div class="value-prop-content" id="online-reputation-management-txt">
                 <h2>Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -58,7 +58,8 @@
                 </p>
             </div>
             <img src="./assets/images/online-reputation-management.jpg"
-                alt="Tech employee reviewing metrics on a laptop screen" />
+                alt="Tech employee reviewing metrics on a laptop screen" id="online-reputation-management-img"
+                class="float-right" />
         </article>
 
         <!-- 3rd value prop -->
