--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             <div class="value-prop-content">
                 <h2>Search Engine Optimization</h2>
                 <p>
-                    The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                    The dominance of mobile internet use means that users are searching for the right business as they
+                    travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
+                    your visibility and find the right customers for your business.
                 </p>
             </div>
         </article>
@@ -78,32 +80,32 @@
 
 
     <!-- Benefits sidebar  -->
-    <div class="benefits">
-        <div class="benefit">
+    <section class="benefits">
+        <article class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
             </p>
-        </div>
-        <div class="benefit">
+        </article>
+        <article class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
             </p>
-        </div>
-        <div class="benefit">
+        </article>
+        <article class="benefit">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
             </p>
-        </div>
-    </div>
+        </article>
+    </section>
     <!-- End sidebar section -->
 
     <!-- Footer -->
